--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ description: A sample command-line application.
 environment:
   sdk: '>=2.5.0 <3.0.0'
 
-#dependencies:
-#  path: ^1.6.0
+dependencies:
+  path: ^1.6.0
 
 dev_dependencies:
   pedantic: ^1.8.0
